fixing z-index problem with login dropdown

--- a/client/edit/slides.css
+++ b/client/edit/slides.css
@@ -47,9 +47,16 @@ h3 {
     cursor: pointer;
 }
 
+#main-pane {
+    position: absolute;
+    width: 100%;
+    z-index:0;
+}
+
 #slide-list {
-    z-index: -1;
-    /*width: 400px;*/
+    position:absolute;
+    z-index: 0;
+    width: 90%; /* this is a hack because I can't figure out how to make it go all the way to the right edge, but not beyond */
 }
 
 #login-dropdown-list {
@@ -77,7 +84,7 @@ h3 {
     position: relative;
     overflow: hidden;
     border-top: 1px solid #ccc;
-    z-index:-1;
+    z-index: 0;
 }
 
 #slide-list .slide:hover {
